# basic-renderer

./: CMakeLists.txt  build.bat
src/: loadstl.cpp  loadstl.hpp  main.cpp  project.cpp  project.hpp
